[package]
name = "lod_be"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-session = "0"
actix-web = "4"
actix-files = "0"
actix-rt = "2.7.0"
dotenvy = "0"
env_logger = "0"
log = "0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1", features = ["full"] }